argocd-extra-after-cilium/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    "io.cilium/lb-ipam-ips": "172.16.133.20"
    metallb.universe.tf/loadBalancerIPs: "172.16.133.20"
spec:
  parentRefs:
  - name: private-gateway
    namespace: infra
  hostnames:
  - "delivery.skyroom.online"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: argocd-server
      port: 80
